@@ -1,5 +1,5 @@
 <HTML>
-<!--    $Id: gmt_nav.html,v 1.30 2010-10-09 22:26:20 guru Exp $      -->
+<!--    $Id: gmt_nav.html,v 1.31 2010-10-27 22:10:19 guru Exp $      -->
 <HEAD>
 <TITLE>The GMT Home Page</TITLE>
 </HEAD>
@@ -63,7 +63,7 @@
 Paul Wessel
 </ADDRESS>
 <BR>Last updated:
-<BR>October 15, 2010
+<BR>November 1, 2010
 <HR><P>
 <A HREF="http://www.soest.hawaii.edu/" target="_top"><IMG SRC="soest_oval_logo_web.gif" ALT="Visit SOEST"></A><BR>
 Visit SOEST home page
